# uiuapy

./: .gitignore  Cargo.toml  README.md  hello.py  pyproject.toml
.github/workflows/: build-and-publish.yml  checks.yml  rust-checks.yml
src/: conversions.rs  lib.rs  main.rs  pycarray.rs  utils.rs
tests/: test_args.py  test_boxed.py  test_bytes.py  test_complex.py  test_conversions.py  test_invalid.py  test_numeric.py  test_uiua.py  test_unicode.py
