[project]
name = "uiua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "maturin>=1.9.0",
    "numpy>=2.3.1",
]

[tool.setuptools]
py-modules = ["uiua"]

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
cache-keys = [{ file = "Cargo.toml" }, { file = "**/*.rs" }]

[project.scripts]
main = "hello:main"

[[tool.setuptools-rust.ext-modules]]
target = "uiua"
path = "Cargo.toml"
